<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/image_descrition"
        android:scaleType="centerCrop"
        android:src="@drawable/welcome" />

    <TextView
        android:id="@+id/app_name"
        style="@style/app_name"
        android:text="@string/app_name" />

    <TextView
        style="@style/welcome_phrase"
        android:layout_below="@id/app_name"
        android:text="@string/welcome_phrase" />

    <TextView
        style="@style/welcome_phrase2"
        android:layout_alignParentBottom="true"
        android:text="@string/welcome_phrase2"/>

</RelativeLayout>