<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.israel.motivation21.LastPageActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/image_descrition"
        android:scaleType="centerCrop"
        android:src="@drawable/stairs" />

    <TextView
        android:id="@+id/app_name"
        style="@style/app_name"
        android:text="@string/app_name" />

    <TextView
        style="@style/welcome_phrase"
        android:layout_below="@id/app_name"
        android:text="@string/get_started_phrase" />

    <Button
        style="@style/start_button"
        android:layout_alignParentBottom="true"
        android:text="@string/action_button"
        android:id="@+id/start_motivation_button" />

</RelativeLayout>